docs: fix a bug when set html, body { height: 100% } on IOS

--- a/assets/app.sass
+++ b/assets/app.sass
@@ -1,6 +1,6 @@
 html, body
   margin: 0
-  height: 100%
+  min-height: 100%
 
 @media (max-width: 576px)
   html
